# atmos

./: .gitignore  Cargo.toml  source.at
example/: source.at
fuzz/: Cargo.toml
fuzz/fuzz_targets/: full_pipeline.rs
src/: error.rs  extension.rs  lib.rs  main.rs  test_runner.rs
src/ast_lowerer/: ast_lowerer.rs  hir.rs  mod.rs
src/lexer/: error.rs  lexer.rs  mod.rs  token.rs  token_kind.rs
src/parser/: ast.rs  error.rs  mod.rs  parser.rs
src/resolver/: collect_defs.rs  defs.rs  error.rs  imports.rs  late.rs  mod.rs  module_builder.rs  modules.rs  resolutions.rs  resolver.rs  ribs.rs  scopes.rs  visitor.rs
src/session/: handler.rs  mod.rs  session.rs
src/type_checker/: checker.rs  error.rs  mod.rs  ty.rs  type_checker.rs  type_collector.rs
tests/: ui.rs
tests/ui/: same_name_module.at  same_name_module.stderr
