[package]
name = "atmos-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
miette = "7.6.0"

[dependencies.atmos]
path = ".."

[[bin]]
name = "full_pipeline"
path = "fuzz_targets/full_pipeline.rs"
test = false
doc = false
bench = false
